# hdf5-pure-rs

./: Cargo.toml  README.md  TODO.md  ccc_mapping.toml
analysis/: unsupported_features.md
benches/: benchmark.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: anndata_read_api_perf.rs  anndata_strings_perf.rs  anndata_write_api_perf.rs  anndata_write_extended_perf.rs  perf_compare.rs  read_only.rs  seuratdata_write_perf.rs  vds.rs
scripts/: export-bmcite-mudataseurat.R  export-seuratdata-fixture.R  generate-modern-fixtures.py  run-read-benchmark.sh  run-single-cell-read-benchmark.sh  seurat_h5py_write_bench.py
src/: error.rs  lib.rs
src/engine/: dataset_api.rs  datatype_api.rs  event_set.rs  file_api.rs  file_space.rs  free_list.rs  free_space.rs  group_api.rs  handle.rs  map_api.rs  memory.rs  metadata_cache.rs  mod.rs  object_api.rs  page_buffer.rs  plugin.rs  property.rs  ref_string.rs  reference.rs  result_tree.rs  shared_message.rs  skip_list.rs  support_api.rs  threading.rs  vfd.rs  vol_api.rs  vol_explicit_wrappers.rs  writer.rs
src/filters/: deflate.rs  fletcher32.rs  lzf.rs  mod.rs  nbit.rs  registry.rs  scaleoffset.rs  shuffle.rs
src/format/: btree_v1.rs  btree_v2.rs  checksum.rs  global_heap.rs  local_heap.rs  superblock.rs  symbol_table.rs  vm.rs
src/format/extensible_array/: dblock.rs  hdr.rs  iblock.rs  mod.rs  sblock.rs
src/format/fixed_array/: dblock.rs  hdr.rs  mod.rs
src/format/fractal_heap/: dblock.rs  dtable.rs  hdr.rs  huge.rs  iblock.rs  man.rs  mod.rs  tiny.rs
src/format/messages/: attribute.rs  attribute_info.rs  data_layout.rs  dataspace.rs  datatype.rs  fill_value.rs  filter_pipeline.rs  link.rs  link_info.rs  symbol_table.rs
src/format/object_header/: cache.rs  chunk.rs  mod.rs  msg.rs
src/hl/: attribute.rs  context.rs  conversion.rs  dataset.rs  dataset_builder.rs  dataspace.rs  datatype.rs  file.rs  group.rs  link.rs  location.rs  mutable_file.rs  selection.rs  types.rs  writable_file.rs
src/hl/dataset/: chunk_btree_v1.rs  chunk_btree_v2.rs  chunk_copy.rs  chunk_linear_index.rs  chunk_read.rs  info.rs  read.rs  selection.rs  storage.rs  support.rs  tests.rs  value_read.rs  virtual_dataset.rs  virtual_decode.rs
src/hl/mutable_file/: attr_mutation.rs  chunk_btree_v1.rs  chunk_btree_v2.rs  chunk_extensible_array.rs  (+5 more)
src/io/: reader.rs  writer.rs
tests/: attr_write_test.rs  attribute_test.rs  chunked_write_test.rs  compact_write_test.rs  compound_test.rs  dataset_test.rs  dense_test.rs  derive_test.rs  endian_test.rs  enum_test.rs  external_storage_test.rs  group_test.rs  link_test.rs  modern_chunk_index_test.rs  plist_test.rs  real_world_test.rs  resize_test.rs  robustness_test.rs  selection_test.rs  storage_allocation_test.rs  string_test.rs  superblock_test.rs  t10_write_roundtrip.rs  t11_cross_platform.rs  t1_reference_files.rs  t2_corrupt_files.rs  t3_datatypes.rs  t4_datasets.rs  t6_groups_links.rs  t7_selections.rs  t9_heaps_indices.rs  typed_read_test.rs  vds_test.rs  write_api_test.rs  write_test.rs
(+4 files in other folders)
